2006-10-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py:  Add writer for key command.

2006-10-17  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: Bump version.
	
	* pykickstart/parser.py, pykickstart/constants.py: add --skip for key

2006-10-16  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: Bump version.

	* pykickstart/parser.py (KickstartHandlers.doKey): Support for
	installation key
	* pykickstart/data.py (KickstartData.__init__): Likewise.

2006-10-13  Bill Nottingham  <notting@redhat.com>

	* af.po, am.po, ar.po, be.po, bg.po, bn.po, cy.po, et.po,
	  eu_ES.po, fa.po, fi.po, he.po, hy.po, kn.po, ku.po, lo.po, lt.po,
	  lv.po, mk.po, my.po, nn.po, no.po, nso.po, ro.po, si.po, sq.po, th.po,
	  ur.po, vi.po, zu.po: Use a valid charset (#210720)
	
	* pykickstart.spec, setup.py: Bump version


2006-09-29  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py: Bump version

	* pykickstart/parser.py (KickstartHandlers.doMethod):  Fix traceback
	and test (#208557).

2006-09-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py: Bump version

	* pykickstart/parser.py (KickstartHandlers.doMethod):  Add support for
	--biospart option (#207585).
	* pykickstart/writer.py (KickstartWriter.doMethod):  Likewise.

	* pykickstart/writer.py (KickstartWriter.doIscsi):  Output new syntax.
	(KickstartWriter.doZFCP):  Likewise.
	(KickstartWriter.doIscsiName):  Added.

2006-09-20  Jeremy Katz  <katzj@redhat.com>

	* pykickstart.spec, setup.py: Bump version

	* pykickstart/parser.py (KickstartHandlers.doIscsi): New and
	improved iscsi syntax.  Also, allow multiple zfcp devs
	* pykickstart/data.py: Likewise.

2006-07-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Add noipv4 and noipv6 to KickstartNetworkData.
	* pykickstart/parser.py (KickstartHandlers.doNetwork):  Limit
	bootproto choices to what anaconda can handle.  Add support for
	--noipv4 and --noipv6 options.