@@ -1,3 +1,7 @@
+2006-10-24  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart.spec, setup.py:  Bump version.
+
 2006-10-17  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/writer.py:  Add writer for key command.
